2022/assets/css/main.css
@import './fonts.css';

:root {
    --colour-1: #001e46;
    --colour-2: #e8413a;
    --colour-3: #00b0a9;
    --colour-4: #fbb900;
    --colour-5: #73ba64;
    --primary-dark: var(--colour-1);
    --primary-light: var(--colour-3);
    --links: var(--colour-2);
    --text-light: #e6e6f4;
}

body {
    width: 100%;
    height: 100%;
    font-family: "Montserrat Alternates", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 17px;
    color: var(--text-light);
    background-color: var(--primary-dark);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Josefin Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 700;
    text-transform: uppercase;
}

.prose h2 {
    padding-top: 80px;
    margin-top: -40px;
}

.prose h2:first-child {
    padding-top: 80px;
    margin-top: -80px;
}

div.affix {
    width: 25%;
    max-width: 300px;
    padding-right: 1em;
}

.uppercase {
    text-transform: uppercase;
}

/************************
    Navbar
************************/

.navbar-custom {
    letter-spacing: 1px;
    margin-bottom: 0;
    border-bottom: 1px solid var(--primary-light);
    background-color: var(--primary-dark);
    font-weight: 500;
}

.navbar-custom .navbar-brand {
    font-weight: normal;
}

.navbar-custom .navbar-brand:focus {
    outline: 0;
}

.navbar-custom .navbar-brand .navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    font-weight: 700;
}

.navbar-custom .navbar-brand .navbar-toggle:focus,
.navbar-custom .navbar-brand .navbar-toggle:active {
    outline: 0;
}

.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus {
    outline: 0;
    background-color: rgba(255, 255, 255, .15);
}

.navbar-custom .nav li a.active {
    outline: 0;
    background-color: rgba(255, 255, 255, .05);
}

.navbar, .navbar a {
    color: var(--primary-dark);
}

.navbar a::hover {
    color: var(--colour-2);
}

nav a, .nav a {
    text-decoration: none;
    font-weight: 500;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

nav {
    font-size: 15px;
}

nav .navbar-brand {
    font-size: 18px;
}

.navbar-brand {
    padding-top: 15px;
    padding-left: 0;
    padding-right: 0;
}

.navbar-toggle {
    margin-bottom: 0;
    margin-right: 0;
    margin-top: 4px;
}


/************************
    Link
************************/

a {
    color: var(--text-light);
    text-decoration: underline;
}

a:hover,
a:focus {
    text-decoration: underline;
    color: var(--links);
    text-decoration-color: var(--links);
}


/************************
    Page
************************/

.page {
    background-color: var(--primary-light);
    color: var(--text-light);
}

/************************
    Footer
************************/

footer a,
.page a {
    color: var(--text-light);
}

footer a:hover,
footer a:focus,
.page a:hover,
.page a:focus {
    color: var(--links);
    text-decoration-color: var(--links);
}

footer {
    padding: 50px 0;
    color: var(--text-light);
}

footer p {
    margin: 0;
}

footer ::selection,
.page ::selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255, 255, 255, .2);
}

footer ::-moz-selection,
.page ::-moz-selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255, 255, 255, .2);
}

footer img::selection,
.page img::selection {
    background: 0 0;
}

footer img::-moz-selection,
.page img::-moz-selection {
    background: 0 0;
}

#footer {
    font-size: 15px;
    line-height: 1.75em;
    background-color: var(--primary-dark);
    padding: 3em;
    border-top: 1px solid var(--primary-light);
}

#footer a.light {
    font-weight: normal;
}

#footer .center {
    padding-top: 2em;
   text-align: center;
}

/************************
    Intro
************************/

.intro {
    display: table;
    width: 100%;
    height: auto;
    padding: 100px 0;
    text-align: center;
    color: var(--primary-dark);
    background-image: url("../img/fond-web.jpg");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    background-repeat: no-repeat;
    background-position-y: bottom;
}

.intro .intro-body {
    display: table-cell;
    vertical-align: middle;
}

.intro .intro-body .logo {
    font-size: 40px;
    text-align: center;
    display: inline-block;
    width: 350px;
}

.intro .intro-body .logo img {
    margin-bottom: 1rem;
}

/************************
    Présentation
************************/

.presentation {
    padding: 3em;
    border-radius: 0;
    text-align: center;
    color: var(--primary-dark);
}

.presentation a {
    color: var(--primary-dark);
}

.presentation .card-title {
    font-size: 2em;
}

.presentation .card-subtitle {
    font-size: 1.8em;
    padding-bottom: 1em;
}

.presentation .card-text {
    font-size: 1.5em;
}

/************************
    Inscription
************************/
.inscription-page {
    padding: 6em 0;
}

#inscription {
    border-radius: 0;
    text-align: center;
}

#inscription em {
    font-weight: bold;
    font-style: normal;
}

#iframe_assoconnect {
    padding-left: 0;
    padding-right: 0;
    overflow: hidden;
    border: 0;
    max-height: none
}


/************************
    Crédits
************************/

header.intro {
    position: relative;
}
.credits {
    position: absolute;
    bottom: 10px;
    right: 30px;
    font-size: 12px;
}

.credits a {
    color: var(--links);
}

/* copyright symbol
.credits a::before {
    content: "\00A9";
    padding-right: 5px;
}
*/

div.img-with-credits {
    position: relative;
}
/* ... */

